--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,11 @@
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 .prettierignore
+.cache
+
+dist/
+node_modules/
+
+README-template.md
+style-guide.md
+plan.txt
