--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "homepage": "https://github.com/Kaipi01/Snap#readme",
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
-    "sass": "^1.55.0"
-  }
+    "sass": "^1.55.0",
+    "stylelint": "^14.13.0",
+    "stylelint-config-standard": "^28.0.0"
+  },
+  "extends": "stylelint-config-property-sort-order-smacss"
 }
